no overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,7 @@ body {
 
   background: cadetblue;
 }
+
+::-webkit-scrollbar {
+  width: 0;
+}
